--- a/python_client/results.html
+++ b/python_client/results.html
@@ -26,7 +26,7 @@ $(function () {
             },
             yAxis: {
                 title: {
-                    text: query_data.y_axis
+                    text: query_data.y_axis_legend
                 },
                 plotLines: [{
                     value: 0,
